--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.5.2
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 Django==4.1.3
 djangorestframework==3.14.0
+gunicorn==20.1.0
 numpy==1.23.4
 opencv-python==4.6.0.66
 Pillow==9.3.0
 pytz==2022.6
 sqlparse==0.4.3
+tzdata==2022.6
